# airflow-providers-mattermost

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: check-3-10.yml  check-3-11.yml  check-3-12.yml  check.yml  publish.yml  python-app.yml  python-publish.yml
airflow_providers_mattermost/: __init__.py  _version.py
airflow_providers_mattermost/hooks/: mattermost.py
airflow_providers_mattermost/notifiers/: mattermost.py
airflow_providers_mattermost/operators/: mattermost.py
docs/source/: attachments.rst  common.rst  conf.py  index.rst  notifiers.rst  operators.rst
tests/common/: test_attachments.py
tests/hooks/: test_mattermost.py
tests/notifiers/: test_mattermost.py
tests/operators/: test_mattermost.py
