[project]
name = "airflow-providers-mattermost"
version = "0.1.0"
description = "Apache Airflow Mattermost provider"
authors = [
    {name = "mee7ya", email = "bas9339@gmail.com"},
]
dependencies = [
    "apache-airflow>=2.10.2",
]
requires-python = "<3.13, >=3.9"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["apache", "airflow", "mattermost", "provider"]
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.apache_airflow_provider]
provider_info = "airflow_providers_mattermost.__init__:get_provider_info"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.7.0",
]
test = [
    "pytest>=8.3.3",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
