[project]
name = "airflow-providers-mattermost"
description = "Apache Airflow Mattermost provider"
authors = [
    {name = "mee7ya", email = "bas9339@gmail.com"},
]
dependencies = [
    "apache-airflow>=2.6.0",
    "requests>=2.27.0",
]
requires-python = "<3.13, >=3.9"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["apache", "airflow", "mattermost", "provider"]
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.apache_airflow_provider]
provider_info = "airflow_providers_mattermost.__init__:get_provider_info"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
write_to = "airflow_providers_mattermost/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.7.0",
]
test = [
    "pytest>=8.3.3",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
